--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "better-scroll": "^1.8.4",
     "cssnano": "^3.10.0",
     "express": "^4.16.2",
+    "fastclick": "^1.0.6",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "0.0.3",
