--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "better-scroll": "^1.8.4",
+    "better-scroll": "^1.11.1",
     "cssnano": "^3.10.0",
     "express": "^4.16.2",
     "fastclick": "^1.0.6",
@@ -21,10 +21,11 @@
     "postcss-px-to-viewport": "0.0.3",
     "postcss-viewport-units": "^0.1.3",
     "postcss-write-svg": "^3.0.1",
-    "vue": "^2.5.2",
+    "vue": "^2.5.16",
     "vue-awesome": "^2.3.5",
     "vue-lazyload": "^1.2.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -71,7 +72,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
