--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.11.1",
+    "connect-history-api-fallback": "^1.5.0",
     "cssnano": "^3.10.0",
     "express": "^4.16.2",
     "fastclick": "^1.0.6",
