--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cssnano": "^3.10.0",
     "express": "^4.16.2",
     "fastclick": "^1.0.6",
+    "mand-mobile": "^1.3.3",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "0.0.3",
